--- a/homework11/index.html
+++ b/homework11/index.html
@@ -43,8 +43,8 @@
                         <div class="col">
                             <a href="#"><i class="fa-solid fa-house"></i></a>
                         </div>
-                        <div class="col">
-                            <a href=""><i class="fa-sharp fa-solid fa-paper-plane"></i></a>
+                        <div class="col position-relative">
+                            <a href=""><i class="messages fa-sharp fa-solid fa-paper-plane"></i></a>
                         </div>
                         <div class="col">
                             <a href="#"><i class="fa-regular fa-compass"></i></a>
@@ -148,7 +148,7 @@
 
                 </div>
             </div>
-            <div class="row g-4 py-5">
+            <div class="row g-4 gap-2 py-5">
                 <div class="col">
                     <img src="../homework11/img/Rectangle 70.png" alt="rect">
                 </div>
