--- a/homework11/index.html
+++ b/homework11/index.html
@@ -74,9 +74,9 @@
                         <div class="col d-flex align-items-center justify-content-left gap-3">
                             <h2>Name</h2>
                             <button type="button" class="btn btn-primary btn-sm">Fallow</button>
-                            <button type="button" class="btn btn-secondary btn-lg">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="8" height="4" viewBox="0 0 8 4"
-                                    fill="none">
+                            <button type="button" class="btn btn-lg position-relative">
+                                <svg class="svg_button" xmlns="http://www.w3.org/2000/svg" width="8" height="4"
+                                    viewBox="0 0 8 4" fill="none">
                                     <path d="M4 4L0 0L8 6.05683e-07L4 4Z" fill="white" />
                                 </svg>
                             </button>
