--- a/homework12/index.html
+++ b/homework12/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet">
+    <title>Препроцесори</title>
   </head>
-  <body> </body>
+  <body> 
+    <header class="header">
+      <div class="container">
+        <nav class="nav">
+          <ul class="nav_list">
+            <li class="nav_list-item"> <a class="one" href="#">Home</a></li>
+            <li class="nav_list-item"> <a class="one" href="#">About </a></li>
+            <li class="nav_list-item"> <a class="one" href="#">Contact</a></li>
+          </ul><a href="#"> <span class="logo">Landie </span></a>
+          <button class="nav_button" type="button">Buy Now   </button>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
