--- a/homework12/index.html
+++ b/homework12/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet">
@@ -14,13 +15,26 @@
       <div class="container">
         <nav class="nav">
           <ul class="nav_list">
-            <li class="nav_list-item"> <a class="one" href="#">Home</a></li>
-            <li class="nav_list-item"> <a class="one" href="#">About </a></li>
-            <li class="nav_list-item"> <a class="one" href="#">Contact</a></li>
-          </ul><a href="#"> <span class="logo">Landie </span></a>
+            <li class="nav_list-item"><a class="nav_list-link" href="#">Home</a></li>
+            <li class="nav_list-item"> <a class="nav_list-link" href="#">About </a></li>
+            <li class="nav_list-item"> <a class="nav_list-link" href="#">Contact</a></li>
+          </ul><a class="logo" href="#">Landie </a>
           <button class="nav_button" type="button">Buy Now   </button>
         </nav>
       </div>
     </header>
+    <main class="main">
+      <div class="container">
+        <section class="product"> 
+          <div class="product_container"> 
+            <h1 class="product_heder">Introduce Your Product Quickly & Effectively</h1>
+            <p class="product_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+            <div class="product_buttons"> </div>
+            <button class="product_button" type="button">Purchase UI Kit</button>
+            <button class="product_button" type="button">Learn More</button>
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
