--- a/homework12/index.html
+++ b/homework12/index.html
@@ -11,30 +11,40 @@
     <title>Препроцесори</title>
   </head>
   <body> 
-    <header class="header">
-      <div class="container">
-        <nav class="nav">
-          <ul class="nav_list">
-            <li class="nav_list-item"><a class="nav_list-link" href="#">Home</a></li>
-            <li class="nav_list-item"> <a class="nav_list-link" href="#">About </a></li>
-            <li class="nav_list-item"> <a class="nav_list-link" href="#">Contact</a></li>
-          </ul><a class="logo" href="#">Landie </a>
-          <button class="nav_button" type="button">Buy Now   </button>
-        </nav>
-      </div>
-    </header>
-    <main class="main">
-      <div class="container">
-        <section class="product"> 
-          <div class="product_container"> 
-            <h1 class="product_heder">Introduce Your Product Quickly & Effectively</h1>
-            <p class="product_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-            <div class="product_buttons"> </div>
-            <button class="product_button" type="button">Purchase UI Kit</button>
-            <button class="product_button" type="button">Learn More</button>
-          </div>
-        </section>
-      </div>
-    </main>
+    <div class="wrapper">
+      <header class="header">
+        <div class="container">
+          <nav class="nav">
+            <ul class="nav_list">
+              <li class="nav_list-item"><a class="nav_list-link" href="#">Home</a></li>
+              <li class="nav_list-item"> <a class="nav_list-link" href="#">About </a></li>
+              <li class="nav_list-item"> <a class="nav_list-link" href="#">Contact</a></li>
+            </ul><a class="logo" href="#">Landie </a>
+            <button class="nav_button button" type="button">Buy Now   </button>
+          </nav>
+        </div>
+      </header>
+      <main class="main">
+        <div class="container">
+          <section class="product"> 
+            <div class="product_container"> 
+              <h1 class="product_title">Introduce Your Product Quickly & Effectively</h1>
+              <p class="product_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+              <div class="product_buttons"> </div>
+              <button class="product_button button" type="button">Purchase UI Kit</button>
+              <button class="product_button button" type="button">Learn More</button>
+            </div>
+          </section>
+          <section class="light"> 
+            <div class="light_left">
+              <h2 class="light_title">Light, Fast & Powerful</h2>
+              <p class="light_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+              <div class="goes"> <img src="../" alt=""></div>
+              <div class="goes"> </div>
+            </div>
+          </section>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
