--- a/homework12/index.html
+++ b/homework12/index.html
@@ -30,18 +30,28 @@
             <div class="product_container"> 
               <h1 class="product_title">Introduce Your Product Quickly & Effectively</h1>
               <p class="product_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-              <div class="product_buttons"> </div>
-              <button class="product_button button" type="button">Purchase UI Kit</button>
-              <button class="product_button button" type="button">Learn More</button>
+              <div class="product_buttons"> 
+                <button class="product_button button" type="button">Purchase UI Kit</button>
+                <button class="product_button button" type="button">Learn More</button>
+              </div>
             </div>
           </section>
           <section class="light"> 
             <div class="light_left">
               <h2 class="light_title">Light, Fast & Powerful</h2>
               <p class="light_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
-              <div class="goes"> <img src="../" alt=""></div>
-              <div class="goes"> </div>
+              <div class="goes_container">
+                <div class="goes"> <img class="goes_img" src="../homework12/img/icon.svg" alt="title">
+                  <h3 class="goes_title">Title Goes Here</h3>
+                  <p class="goes_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
+                </div>
+                <div class="goes"> <img class="goes_img" src="../homework12/img/icon.svg" alt="title">
+                  <h3 class="goes_title">Title Goes Here</h3>
+                  <p class="goes_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
+                </div>
+              </div>
             </div>
+            <div class="light_right"> <img class="right_img" src="../homework12/img/girl.png" alt="girl"></div>
           </section>
         </div>
       </main>
