--- a/homework12/index.html
+++ b/homework12/index.html
@@ -53,6 +53,33 @@
             </div>
             <div class="light_right"> <img class="right_img" src="../homework12/img/girl.png" alt="girl"></div>
           </section>
+          <section class="lights"> 
+            <div class="lights_img"> <img src="../homework12/img/girl2.png" alt="girl2"></div>
+            <div class="lights_text">   
+              <h2 class="light_title">Light, Fast & Powerful</h2>
+              <p class="light_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+            </div>
+          </section>
+          <section class="lights"> 
+            <div class="lights_img"> <img src="../homework12/img/undraw_mention_6k5d.png" alt="girl2"></div>
+            <div class="lights_text">   
+              <h2 class="light_title">Light, Fast & Powerful</h2>
+              <p class="light_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+            </div>
+          </section>
+          <section class="lights"> 
+            <div class="lights_img"> <img src="../homework12/img/undraw_social_influencer_sgsv.png" alt="girl2"></div>
+            <div class="lights_text">   
+              <h2 class="light_title">Light, Fast & Powerful</h2>
+              <p class="light_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+              <button class="lights_button button" type="button">Purchase Now</button>
+            </div>
+          </section>
+          <section class="price">
+            <h2 class="price_title">A Price To Suit Everyone</h2>
+            <p class="price_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus </p><span class="price_dol">$40</span><span class="price_kit">UI Design Kit</span><span class="price_see">See, One price. Simple.</span><br>
+            <button class="price_button button" type="button">Purchase Now</button>
+          </section>
         </div>
       </main>
     </div>
