--- a/homework12/index.html
+++ b/homework12/index.html
@@ -77,11 +77,32 @@
           </section>
           <section class="price">
             <h2 class="price_title">A Price To Suit Everyone</h2>
-            <p class="price_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus </p><span class="price_dol">$40</span><span class="price_kit">UI Design Kit</span><span class="price_see">See, One price. Simple.</span><br>
+            <p class="price_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus </p><span class="price_dol">$40</span><br><span class="price_kit">UI Design Kit</span><br><span class="price_see">See, One price. Simple.</span>
             <button class="price_button button" type="button">Purchase Now</button>
           </section>
         </div>
       </main>
+      <footer class="footer"> 
+        <div class="container"> 
+          <div class="footer_top"> <span class="footer_copyright">©2020 Yourcompany</span><a class="footer_logo logo" href="#">Landie</a>
+            <button class="footer_button button" type="button">Purchase Now</button>
+          </div>
+          <div class="footer_bottom"> 
+            <ul class="nav_list">
+              <li class="nav_list-item"><a class="nav_list-link" href="#">Home</a></li>
+              <li class="nav_list-item"> <a class="nav_list-link" href="#">About </a></li>
+              <li class="nav_list-item"> <a class="nav_list-link" href="#">Contact</a></li>
+            </ul>
+            <ul class="footer_icons"> 
+              <li class="footer_icon"> <a class="footer_link" href="#"> <img src="../homework12/img/facebook.png" alt="facebook"></a></li>
+              <li class="footer_icon"> <a class="footer_link" href="#"><img src="../homework12/img/linked.png" alt="linked"></a></li>
+              <li class="footer_icon"> <a class="footer_link" href="#"><img src="../homework12/img/twitter.png" alt="twitter"></a></li>
+              <li class="footer_icon"> <a class="footer_link" href="#"><img src="../homework12/img/youtube.png" alt="youtube"></a></li>
+              <li class="footer_icon"> <a class="footer_link" href="#"><img src="../homework12/img/instagram.png" alt="instagram"></a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
