--- a/homework12/index.html
+++ b/homework12/index.html
@@ -41,11 +41,11 @@
               <h2 class="light_title">Light, Fast & Powerful</h2>
               <p class="light_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusmus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
               <div class="goes_container">
-                <div class="goes"> <img class="goes_img" src="../homework12/img/icon.svg" alt="title">
+                <div class="goes"> <img class="goes_img" src="../homework12/img/Icon.svg" alt="title">
                   <h3 class="goes_title">Title Goes Here</h3>
                   <p class="goes_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
                 </div>
-                <div class="goes"> <img class="goes_img" src="../homework12/img/icon.svg" alt="title">
+                <div class="goes"> <img class="goes_img" src="../homework12/img/Icon.svg" alt="title">
                   <h3 class="goes_title">Title Goes Here</h3>
                   <p class="goes_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. </p>
                 </div>
@@ -98,7 +98,7 @@
               <li class="footer_icon"> <a class="footer_link" href="#"><img src="../homework12/img/linked.png" alt="linked"></a></li>
               <li class="footer_icon"> <a class="footer_link" href="#"><img src="../homework12/img/twitter.png" alt="twitter"></a></li>
               <li class="footer_icon"> <a class="footer_link" href="#"><img src="../homework12/img/youtube.png" alt="youtube"></a></li>
-              <li class="footer_icon"> <a class="footer_link" href="#"><img src="../homework12/img/instagram.png" alt="instagram"></a></li>
+              <li class="footer_icon"> <a class="footer_link" href="#"><img src="../homework12/img/instagram.png" alt="Instagram"></a></li>
             </ul>
           </div>
         </div>
