--- a/homework13/index.html
+++ b/homework13/index.html
@@ -397,7 +397,72 @@
                         <span class="button_text">Download</span>
                     </button>
                 </div>
-                <div class="smallButtons__right"></div>
+                <div class="smallButtons__right">
+                    <div class="right__tab">
+                        <button class="smallButtons_button button button--color-blue button--size-134" type="button">
+                            Tab 1
+                        </button>
+                        <button class="smallButtons_button button button--color-secondary button--size-134"
+                            type="button">
+                            Tab 1
+                        </button>
+                    </div>
+                    <div class="right__top">
+                        <button class="smallButtons_button button button--color-blue button--size-56" type="button">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M11 7C8.79086 7 7 8.79086 7 11C7 13.2091 8.79086 15 11 15C13.2091 15 15 13.2091 15 11C15 8.79086 13.2091 7 11 7ZM5 11C5 7.68629 7.68629 5 11 5C14.3137 5 17 7.68629 17 11C17 12.2958 16.5892 13.4957 15.8907 14.4765L19.7071 18.2929C20.0976 18.6834 20.0976 19.3166 19.7071 19.7071C19.3166 20.0976 18.6834 20.0976 18.2929 19.7071L14.4765 15.8907C13.4957 16.5892 12.2958 17 11 17C7.68629 17 5 14.3137 5 11Z"
+                                    fill="white" />
+                            </svg>
+                        </button>
+                        <button class="smallButtons_button button button--icon button--color-secondary button--size-56"
+                            type="button">
+                            <span class="button__svg">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="10" height="13" viewBox="0 0 10 13"
+                                    fill="none">
+                                    <path d="M5 1.50073L5 11.5007" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                    <path d="M5 11.5007L8.375 8.12573" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                    <path d="M5 11.5007L1.625 8.12573" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="9" viewBox="0 0 18 9"
+                                    fill="none">
+                                    <path d="M1 1V8H17V1" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </span>
+                        </button>
+                        <button class="smallButtons_button button button--color-secondary button--size-56"
+                            type="button">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none">
+                                <path
+                                    d="M15 12.51H15.5V12.01V10.51H16.5V13.01C16.5 13.2869 16.2769 13.51 16 13.51H8C7.72314 13.51 7.5 13.2869 7.5 13.01V10.51H8.5V12.01V12.51H9H15Z"
+                                    fill="none" />
+                                <path
+                                    d="M2.92205 6.30863L2.90861 6.29902L5.3096 3.10657L5.3101 3.1059C5.58912 2.73363 6.0385 2.50903 6.508 2.50903H17.508C17.9791 2.50903 18.4295 2.73545 18.7101 3.11188L18.7105 3.11237L21.1053 6.31638L21.0935 6.32544L21.3866 6.72011C21.4672 6.82871 21.5 6.92251 21.5 7.01003V18.01C21.5 18.8369 20.8269 19.51 20 19.51H4C3.17314 19.51 2.5 18.8369 2.5 18.01V7.01003C2.5 6.92206 2.53338 6.82686 2.615 6.71803L2.92205 6.30863ZM6.508 3.51003H6.2584L6.10838 3.70952L4.60438 5.70952L4.0024 6.51003H5.004H19.003H20.001L19.4035 5.71067L17.9085 3.71067L17.7585 3.51003H17.508H6.508ZM3.5 18.01V18.51H4H20.002H20.5021L20.502 18.0099L20.5 8.00993L20.4999 7.51003H20H4H3.5V8.01003V18.01Z"
+                                    fill="none" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <div class="right__bot">
+                        <button class="smallButtons_button button button--color-blue button--size-134" type="button">
+                            S
+                        </button>
+                        <button class="smallButtons_button button button--color-secondary button--size-134"
+                            type="button">
+                            M
+                        </button>
+                        <button class="smallButtons_button button button--color-secondary button--size-134"
+                            type="button">
+                            L
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
 
