--- a/homeworkFinal/index.html
+++ b/homeworkFinal/index.html
@@ -29,7 +29,18 @@
         <main class="main">
             <div class="_container">
                 <section class="one">
-
+                    <div class="one__container">
+                        <span class="one__digit digit">01</span>
+                        <h3 class="one__subtitle subtitle subtitle-right">GET STARTED</h3>
+                        <h2 class="one__title title">Explore <br>
+                            the World with us</h2>
+                        <p class="one__text text">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when
+                            an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                    </div>
+                    <div class="one__img">
+                        <img src="../homeworkFinal/img/image1-1.png" width="512px" height="512px" alt="1">
+                    </div>
                 </section>
             </div>
         </main>
