--- a/homeworkFinal/index.html
+++ b/homeworkFinal/index.html
@@ -41,6 +41,12 @@
                     <div class="one__img">
                         <img src="../homeworkFinal/img/image1-1.png" width="512px" height="512px" alt="1">
                     </div>
+                    <div class="one__listimg">
+                        <img src="../homeworkFinal/img/image1-2.png" alt="" class="one__items">
+                        <img src="../homeworkFinal/img/image1-3.png" alt="" class="one__items">
+                        <img src="../homeworkFinal/img/image1-4.png" alt="" class="one__items">
+                        <img src="../homeworkFinal/img/image1-5.png" alt="" class="one__items">
+                    </div>
                 </section>
             </div>
         </main>
