--- a/homework13/index.html
+++ b/homework13/index.html
@@ -399,10 +399,10 @@
                 </div>
                 <div class="smallButtons__right">
                     <div class="right__tab">
-                        <button class="smallButtons_button button button--color-blue button--size-134" type="button">
+                        <button class="smallButtons_button button button--color-blue button--size-small" type="button">
                             Tab 1
                         </button>
-                        <button class="smallButtons_button button button--color-secondary button--size-134"
+                        <button class="smallButtons_button button button--color-secondary button--size-small"
                             type="button">
                             Tab 1
                         </button>
@@ -426,7 +426,7 @@
                         </button>
                     </div>
                     <div class="right__top">
-                        <button class="smallButtons_button button button--color-blue button--size-56" type="button">
+                        <button class="smallButtons_button button button--color-blue button--size-square" type="button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
                                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -434,7 +434,8 @@
                                     fill="white" />
                             </svg>
                         </button>
-                        <button class="smallButtons_button button button--icon button--color-secondary button--size-56"
+                        <button
+                            class="smallButtons_button button button--icon button--color-secondary button--size-square"
                             type="button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
@@ -444,7 +445,7 @@
                             </svg>
 
                         </button>
-                        <button class="smallButtons_button button button--color-secondary button--size-56"
+                        <button class="smallButtons_button button button--color-secondary button--size-square"
                             type="button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
@@ -456,14 +457,15 @@
                     </div>
 
                     <div class="right__bot">
-                        <button class="smallButtons_button button button--color-blue button--size-134" type="button">
+                        <button class="smallButtons_button button button--color-blue button--size-squaresml"
+                            type="button">
                             S
                         </button>
-                        <button class="smallButtons_button button button--color-secondary button--size-134"
+                        <button class="smallButtons_button button button--color-secondary button--size-squaresml"
                             type="button">
                             M
                         </button>
-                        <button class="smallButtons_button button button--color-secondary button--size-134"
+                        <button class="smallButtons_button button button--color-secondary button--size-squaresml"
                             type="button">
                             L
                         </button>
@@ -472,19 +474,33 @@
 
             </div>
         </div>
-        <button class="smallButtons_button button button--color-blue" type="button">
-            <span>Tag</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
-                <g opacity="0.7">
-                    <path
-                        d="M8.00002 7.76427L7.64647 7.41071L5.45121 5.21544C5.45121 5.21544 5.45121 5.21544 5.45121 5.21544C5.38612 5.15036 5.2806 5.15036 5.2155 5.21543C5.2155 5.21544 5.2155 5.21544 5.2155 5.21544M8.00002 7.76427L4.86195 5.8047C4.6016 5.54435 4.6016 5.12224 4.86195 4.86189L5.2155 5.21544M8.00002 7.76427L8.35357 7.41071M8.00002 7.76427L8.35357 7.41071M5.2155 5.21544C5.15042 5.28054 5.15042 5.38606 5.2155 5.45115L5.2155 5.21544ZM8.35357 7.41071L10.5488 5.21544L10.5488 5.21543M8.35357 7.41071L10.5488 5.21543M10.5488 5.21543C10.6139 5.15036 10.7195 5.15036 10.7845 5.21543L10.5488 5.21543ZM7.41077 7.6464L5.2155 5.45115L10.7845 5.21543C10.8496 5.28052 10.8496 5.38605 10.7845 5.45115C10.7845 5.45115 10.7845 5.45116 10.7845 5.45116L8.58927 7.64641L8.23571 7.99996L8.58927 8.35351L10.7845 10.5488C10.8496 10.6139 10.8496 10.7194 10.7845 10.7845C10.7195 10.8495 10.6139 10.8495 10.5488 10.7845L8.35357 8.58921L8.00002 8.23565L7.64647 8.58921L5.45122 10.7845C5.45122 10.7845 5.45121 10.7845 5.45121 10.7845C5.38611 10.8495 5.28058 10.8495 5.21549 10.7845C5.15042 10.7194 5.15042 10.6139 5.21549 10.5488L5.2155 10.5488L7.41077 8.35351L7.76433 7.99996L7.41077 7.6464Z" />
-                </g>
-            </svg>
-        </button>
-        <button class="smallButtons_button button button--color-secondary" type="button">
-            Tag
-        </button>
+        <div class="tag__buttons">
+            <button class="tag__button button button--color-blue button--size-tagbig" type="button">
+                <span>Tag</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                    <g opacity="0.7">
+                        <path
+                            d="M8.00002 7.76427L7.64647 7.41071L5.45121 5.21544C5.45121 5.21544 5.45121 5.21544 5.45121 5.21544C5.38612 5.15036 5.2806 5.15036 5.2155 5.21543C5.2155 5.21544 5.2155 5.21544 5.2155 5.21544M8.00002 7.76427L4.86195 5.8047C4.6016 5.54435 4.6016 5.12224 4.86195 4.86189L5.2155 5.21544M8.00002 7.76427L8.35357 7.41071M8.00002 7.76427L8.35357 7.41071M5.2155 5.21544C5.15042 5.28054 5.15042 5.38606 5.2155 5.45115L5.2155 5.21544ZM8.35357 7.41071L10.5488 5.21544L10.5488 5.21543M8.35357 7.41071L10.5488 5.21543M10.5488 5.21543C10.6139 5.15036 10.7195 5.15036 10.7845 5.21543L10.5488 5.21543ZM7.41077 7.6464L5.2155 5.45115L10.7845 5.21543C10.8496 5.28052 10.8496 5.38605 10.7845 5.45115C10.7845 5.45115 10.7845 5.45116 10.7845 5.45116L8.58927 7.64641L8.23571 7.99996L8.58927 8.35351L10.7845 10.5488C10.8496 10.6139 10.8496 10.7194 10.7845 10.7845C10.7195 10.8495 10.6139 10.8495 10.5488 10.7845L8.35357 8.58921L8.00002 8.23565L7.64647 8.58921L5.45122 10.7845C5.45122 10.7845 5.45121 10.7845 5.45121 10.7845C5.38611 10.8495 5.28058 10.8495 5.21549 10.7845C5.15042 10.7194 5.15042 10.6139 5.21549 10.5488L5.2155 10.5488L7.41077 8.35351L7.76433 7.99996L7.41077 7.6464Z" />
+                    </g>
+                </svg>
+            </button>
+            <button class="tag__button button button--color-secondary button--size-tagbig" type="button">
+                <span>Tag</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
+                    <g opacity="0.7">
+                        <path
+                            d="M8.00002 7.76427L7.64647 7.41071L5.45121 5.21544C5.45121 5.21544 5.45121 5.21544 5.45121 5.21544C5.38612 5.15036 5.2806 5.15036 5.2155 5.21543C5.2155 5.21544 5.2155 5.21544 5.2155 5.21544M8.00002 7.76427L4.86195 5.8047C4.6016 5.54435 4.6016 5.12224 4.86195 4.86189L5.2155 5.21544M8.00002 7.76427L8.35357 7.41071M8.00002 7.76427L8.35357 7.41071M5.2155 5.21544C5.15042 5.28054 5.15042 5.38606 5.2155 5.45115L5.2155 5.21544ZM8.35357 7.41071L10.5488 5.21544L10.5488 5.21543M8.35357 7.41071L10.5488 5.21543M10.5488 5.21543C10.6139 5.15036 10.7195 5.15036 10.7845 5.21543L10.5488 5.21543ZM7.41077 7.6464L5.2155 5.45115L10.7845 5.21543C10.8496 5.28052 10.8496 5.38605 10.7845 5.45115C10.7845 5.45115 10.7845 5.45116 10.7845 5.45116L8.58927 7.64641L8.23571 7.99996L8.58927 8.35351L10.7845 10.5488C10.8496 10.6139 10.8496 10.7194 10.7845 10.7845C10.7195 10.8495 10.6139 10.8495 10.5488 10.7845L8.35357 8.58921L8.00002 8.23565L7.64647 8.58921L5.45122 10.7845C5.45122 10.7845 5.45121 10.7845 5.45121 10.7845C5.38611 10.8495 5.28058 10.8495 5.21549 10.7845C5.15042 10.7194 5.15042 10.6139 5.21549 10.5488L5.2155 10.5488L7.41077 8.35351L7.76433 7.99996L7.41077 7.6464Z" />
+                    </g>
+                </svg>
+            </button>
 
+            <button class="tag__button button button--color-blue button--size-tagsmall" type="button">
+                Tag
+            </button>
+            <button class="tag__button button button--color-secondary button--size-tagsmall" type="button">
+                Tag
+            </button>
+        </div>
     </div>
 </body>
 
