--- a/homeworkFinal/index.html
+++ b/homeworkFinal/index.html
@@ -30,8 +30,8 @@
             <div class="_container">
                 <section class="one">
                     <div class="one__container">
-                        <div class="one_head">
-                            <span class="one__digit digit">01</span>
+                        <div class="one__head">
+                            <span class="one__digit digit digit-absolute">01</span>
                             <h3 class="one__subtitle subtitle subtitle-right">GET STARTED</h3>
                             <h2 class="one__title title">Explore <br>
                                 the World with us</h2>
@@ -42,21 +42,95 @@
                             </p>
                         </div>
                         <div class="one__img">
-                            <img src="../homeworkFinal/img/image1-1.png" width="512px" height="512px" alt="1">
+                            <img class="one__img_item" src="../homeworkFinal/img/image1-1.png" width="512px" alt="1">
                         </div>
                     </div>
                     <div class="one__listimg">
-                        <img src="../homeworkFinal/img/image1-2.png" alt="" class="one__items">
-                        <img src="../homeworkFinal/img/image1-3.png" alt="" class="one__items">
-                        <img src="../homeworkFinal/img/image1-4.png" alt="" class="one__items">
-                        <img src="../homeworkFinal/img/image1-5.png" alt="" class="one__items">
+                        <img src="../homeworkFinal/img/image1-2.png" alt="image1-2" class="one__items">
+                        <img src="../homeworkFinal/img/image1-3.png" alt="image1-3" class="one__items">
+                        <img src="../homeworkFinal/img/image1-4.png" alt="image1-4" class="one__items">
+                        <img src="../homeworkFinal/img/image1-5.png" alt="image1-5" class="one__items">
                     </div>
 
                 </section>
+                <section class="two">
+                    <div class="two__img">
+                        <img class="two__img-item" src="../homeworkFinal/img/image2-1.png" alt="2-1">
+                    </div>
+                    <div class="two__content">
+                        <span class="two__digit digit digit-absolute">02</span>
+                        <h3 class="two__subtitle subtitle subtitle-right">HIKING ESSENTIALS</h3>
+                        <h2 class="two__title title">Don`t miss!</h2>
+                        <p class="two__text text">The nice thing about beginning hiking is that you don’t really need
+                            any special gear, you can probably get away with things you already have.
+                            Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and
+                            regular clothes, which will get heavy and chafe wif they get sweaty or wet.</p>
+                    </div>
+                </section>
+
+                <section class="three">
+                    <div class="three__container">
+                        <div class="three__head">
+                            <span class="three__digit digit digit-absolute">03</span>
+                            <h3 class="three__subtitle subtitle subtitle-right">WHERE YOU GO IS THE KEY</h3>
+                            <h2 class="three__title title">Open the wihdow</h2>
+                            <p class="three__text text">To start, print out the hiking guide and map. If it’s raining,
+                                throw them in a Zip-Lock bag. Read over the guide, study the map, and have a good idea
+                                of what to expect. I like to know what my next landmark is as I hike. For example, I’ll
+                                read the guide and know that say, in a mile, I make a right turn at the junction..
+                            </p>
+                        </div>
+                        <div class="three__img">
+                            <img class="three__img_item" src="../homeworkFinal/img/image3.png" width="512px" alt="1">
+                        </div>
+                    </div>
+                    <div class="three__listimg">
+                        <img src="../homeworkFinal/img/image3-1.png" alt="image1-2" class="three__items">
+                        <img src="../homeworkFinal/img/image3-2.png" alt="image1-3" class="three__items">
+                        <img src="../homeworkFinal/img/image3-3.png" alt="image1-4" class="three__items">
+                        <img src="../homeworkFinal/img/image3-4.png" alt="image1-5" class="three__items">
+                    </div>
+
+                </section>
+                <section class="total">
+                    <div class="total__item">
+                        <span class="total__digit digit">44</span>
+                        <h3 class="total__subtitle subtitle">Visited countries</h3>
+                    </div>
+                    <div class="total__item">
+                        <span class="total__digit digit">120</span>
+                        <h3 class="total__subtitle subtitle">Travel touts</h3>
+                    </div>
+                    <div class="total__item">
+                        <span class="total__digit digit">1020</span>
+                        <h3 class="total__subtitle subtitle">Happy clients</h3>
+                    </div>
+                    <div class="total__item">
+                        <span class="total__digit digit">21</span>
+                        <h3 class="total__subtitle subtitle">Tracking tours</h3>
+                    </div>
+                </section>
+                <section class="explore">
+                    <div class="explore__content">
+                        <h2 class="explore__title title">Explore more</h2>
+                        <p class="explore__text text">
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been
+                            the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+                            galley
+                            of type and scrambled it to make a type specimen book.
+                        </p>
+                        <button class="explore__button button" type="button">READ MORE</button>
+                    </div>
+                    <div class="explore__img">
+                        <img class="explore__img-item" src="../homeworkFinal/img/explore.png" alt="3">
+                    </div>
+                </section>
             </div>
+
         </main>
         <footer class="footer">
-            3
+
         </footer>
     </div>
 </body>
