--- a/homeworkFinal/index.html
+++ b/homeworkFinal/index.html
@@ -42,20 +42,43 @@
                             </p>
                         </div>
                         <div class="one__img">
-                            <img class="one__img_item" src="../homeworkFinal/img/image1-1.png" width="512px" alt="1">
+                            <picture>
+                                <source type="image/webp" srcset="../homeworkFinal/img/image1-1.webp">
+                                <img class="one__img_item" src="../homeworkFinal/img/image1-1.png" width="512px"
+                                    alt="1">
+                            </picture>
+
                         </div>
                     </div>
                     <div class="one__listimg">
-                        <img src="../homeworkFinal/img/image1-2.png" alt="image1-2" class="one__items">
-                        <img src="../homeworkFinal/img/image1-3.png" alt="image1-3" class="one__items">
-                        <img src="../homeworkFinal/img/image1-4.png" alt="image1-4" class="one__items">
-                        <img src="../homeworkFinal/img/image1-5.png" alt="image1-5" class="one__items">
+                        <picture>
+                            <source type="image/webp" srcset="../homeworkFinal/img/image1-2.webp">
+                            <img src="../homeworkFinal/img/image1-2.png" alt="image1-2" class="one__items">
+                        </picture>
+                        <picture>
+                            <source type="image/webp" srcset="../homeworkFinal/img/image1-3.webp">
+                            <img src="../homeworkFinal/img/image1-3.png" alt="image1-3" class="one__items">
+                        </picture>
+                        <picture>
+                            <source type="image/webp" srcset="../homeworkFinal/img/image1-4.webp">
+                            <img src="../homeworkFinal/img/image1-4.png" alt="image1-4" class="one__items">
+                        </picture>
+                        <picture>
+                            <source type="image/webp" srcset="../homeworkFinal/img/image1-5.webp">
+                            <img src="../homeworkFinal/img/image1-5.png" alt="image1-5" class="one__items">
+                        </picture>
+
+
                     </div>
 
                 </section>
                 <section class="two">
                     <div class="two__img">
-                        <img class="two__img-item" src="../homeworkFinal/img/image2-1.png" alt="2-1">
+                        <picture>
+                            <source type="image/webp" srcset="../homeworkFinal/img/image2-1.webp">
+                            <img class="two__img-item" src="../homeworkFinal/img/image2-1.png" alt="2-1">
+                        </picture>
+
                     </div>
                     <div class="two__content">
                         <span class="two__digit digit digit-absolute">02</span>
@@ -81,14 +104,32 @@
                             </p>
                         </div>
                         <div class="three__img">
-                            <img class="three__img_item" src="../homeworkFinal/img/image3.png" width="512px" alt="1">
+                            <picture>
+                                <source type="image/webp" srcset="../homeworkFinal/img/image3.webp">
+                                <img class="three__img_item" src="../homeworkFinal/img/image3.png" width="512px"
+                                    alt="1">
+                            </picture>
+
                         </div>
                     </div>
                     <div class="three__listimg">
-                        <img src="../homeworkFinal/img/image3-1.png" alt="image1-2" class="three__items">
-                        <img src="../homeworkFinal/img/image3-2.png" alt="image1-3" class="three__items">
-                        <img src="../homeworkFinal/img/image3-3.png" alt="image1-4" class="three__items">
-                        <img src="../homeworkFinal/img/image3-4.png" alt="image1-5" class="three__items">
+                        <picture>
+                            <source type="image/webp" srcset="../homeworkFinal/img/image3-1.webp">
+                            <img src="../homeworkFinal/img/image3-1.png" alt="image3-1" class="three__items">
+                        </picture>
+                        <picture>
+                            <source type="image/webp" srcset="../homeworkFinal/img/image3-2.webp">
+                            <img src="../homeworkFinal/img/image3-2.png" alt="image3-2" class="three__items">
+                        </picture>
+                        <picture>
+                            <source type="image/webp" srcset="../homeworkFinal/img/image3-3.webp">
+                            <img src="../homeworkFinal/img/image3-3.png" alt="image3-3" class="three__items">
+                        </picture>
+                        <picture>
+                            <source type="image/webp" srcset="../homeworkFinal/img/image3-4.webp">
+                            <img src="../homeworkFinal/img/image3-4.png" alt="image3-4" class="three__items">
+                        </picture>
+
                     </div>
 
                 </section>
@@ -123,7 +164,11 @@
                         <button class="explore__button button" type="button">READ MORE</button>
                     </div>
                     <div class="explore__img">
-                        <img class="explore__img-item" src="../homeworkFinal/img/explore.png" alt="3">
+                        <picture>
+                            <source type="image/webp" srcset="../homeworkFinal/img/explore.webp">
+                            <img class="explore__img-item" src="../homeworkFinal/img/explore.png" alt="3">
+                        </picture>
+
                     </div>
                 </section>
             </div>
@@ -184,7 +229,8 @@
                                     <path
                                         d="M22.2234 0H1.77187C0.792187 0 0 0.773438 0 1.72969V22.2656C0 23.2219 0.792187 24 1.77187 24H22.2234C23.2031 24 24 23.2219 24 22.2703V1.72969C24 0.773438 23.2031 0 22.2234 0ZM7.12031 20.4516H3.55781V8.99531H7.12031V20.4516ZM5.33906 7.43438C4.19531 7.43438 3.27188 6.51094 3.27188 5.37187C3.27188 4.23281 4.19531 3.30937 5.33906 3.30937C6.47813 3.30937 7.40156 4.23281 7.40156 5.37187C7.40156 6.50625 6.47813 7.43438 5.33906 7.43438ZM20.4516 20.4516H16.8937V14.8828C16.8937 13.5562 16.8703 11.8453 15.0422 11.8453C13.1906 11.8453 12.9094 13.2937 12.9094 14.7891V20.4516H9.35625V8.99531H12.7687V10.5609H12.8156C13.2891 9.66094 14.4516 8.70938 16.1813 8.70938C19.7859 8.70938 20.4516 11.0813 20.4516 14.1656V20.4516Z" />
                                 </svg>
-                            </a>/li>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
