--- a/homeworkFinal/index.html
+++ b/homeworkFinal/index.html
@@ -51,9 +51,9 @@
                         </div>
                     </div>
                     <div class="one__listimg">
-                        <picture>
+                        <picture class="one__items">
                             <source type="image/webp" srcset="../homeworkFinal/img/image1-2.webp">
-                            <img src="../homeworkFinal/img/image1-2.png" alt="image1-2" class="one__items">
+                            <img src="../homeworkFinal/img/image1-2.png" alt="image1-2">
                         </picture>
                         <picture>
                             <source type="image/webp" srcset="../homeworkFinal/img/image1-3.webp">
