--- a/homeworkFinal/index.html
+++ b/homeworkFinal/index.html
@@ -55,17 +55,17 @@
                             <source type="image/webp" srcset="../homeworkFinal/img/image1-2.webp">
                             <img src="../homeworkFinal/img/image1-2.png" alt="image1-2">
                         </picture>
-                        <picture>
+                        <picture class="one__items">
                             <source type="image/webp" srcset="../homeworkFinal/img/image1-3.webp">
-                            <img src="../homeworkFinal/img/image1-3.png" alt="image1-3" class="one__items">
+                            <img src="../homeworkFinal/img/image1-3.png" alt="image1-3">
                         </picture>
-                        <picture>
+                        <picture class="one__items">
                             <source type="image/webp" srcset="../homeworkFinal/img/image1-4.webp">
-                            <img src="../homeworkFinal/img/image1-4.png" alt="image1-4" class="one__items">
+                            <img src="../homeworkFinal/img/image1-4.png" alt="image1-4">
                         </picture>
-                        <picture>
+                        <picture class="one__items">
                             <source type="image/webp" srcset="../homeworkFinal/img/image1-5.webp">
-                            <img src="../homeworkFinal/img/image1-5.png" alt="image1-5" class="one__items">
+                            <img src="../homeworkFinal/img/image1-5.png" alt="image1-5">
                         </picture>
 
 
@@ -113,21 +113,21 @@
                         </div>
                     </div>
                     <div class="three__listimg">
-                        <picture>
+                        <picture class="three__items">
                             <source type="image/webp" srcset="../homeworkFinal/img/image3-1.webp">
-                            <img src="../homeworkFinal/img/image3-1.png" alt="image3-1" class="three__items">
+                            <img src="../homeworkFinal/img/image3-1.png" alt="image3-1">
                         </picture>
-                        <picture>
+                        <picture class="three__items">
                             <source type="image/webp" srcset="../homeworkFinal/img/image3-2.webp">
-                            <img src="../homeworkFinal/img/image3-2.png" alt="image3-2" class="three__items">
+                            <img src="../homeworkFinal/img/image3-2.png" alt="image3-2">
                         </picture>
-                        <picture>
+                        <picture class="three__items">
                             <source type="image/webp" srcset="../homeworkFinal/img/image3-3.webp">
-                            <img src="../homeworkFinal/img/image3-3.png" alt="image3-3" class="three__items">
+                            <img src="../homeworkFinal/img/image3-3.png" alt="image3-3">
                         </picture>
-                        <picture>
+                        <picture class="three__items">
                             <source type="image/webp" srcset="../homeworkFinal/img/image3-4.webp">
-                            <img src="../homeworkFinal/img/image3-4.png" alt="image3-4" class="three__items">
+                            <img src="../homeworkFinal/img/image3-4.png" alt="image3-4">
                         </picture>
 
                     </div>
