--- a/homeworkFinal/index.html
+++ b/homeworkFinal/index.html
@@ -21,14 +21,14 @@
                     <h3 class="header__subtitle subtitle">life is great</h3>
                     <p class="header__text text">Lorem Ipsum is simply dummy text of the printing and typesetting
                         industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</p>
-                    <button class="header__button button" type="button">READ MORE</button>
+                    <a href="#01" class="header__button button" type="button">READ MORE</a>
                 </div>
             </div>
 
         </header>
         <main class="main">
             <div class="_container">
-                <section class="one">
+                <section class="one" id="01">
                     <div class="one__container">
                         <div class="one__head">
                             <span class="one__digit digit digit-absolute">01</span>
@@ -161,7 +161,7 @@
                             galley
                             of type and scrambled it to make a type specimen book.
                         </p>
-                        <button class="explore__button button" type="button">READ MORE</button>
+                        <a href="#01" class="explore__button button" type="button">READ MORE</a>
                     </div>
                     <div class="explore__img">
                         <picture>
@@ -236,6 +236,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script defer src="/homeworkFinal/index.js"></script>
 </body>
 
