--- a/homeworkFinal/index.html
+++ b/homeworkFinal/index.html
@@ -135,19 +135,19 @@
                 </section>
                 <section class="total">
                     <div class="total__item">
-                        <span class="total__digit digit" data-val="44">00</span>
+                        <span class="total__digit digit">44</span>
                         <h3 class="total__subtitle subtitle">Visited countries</h3>
                     </div>
                     <div class="total__item">
-                        <span class="total__digit digit" data-val="120">000</span>
+                        <span class="total__digit digit">120</span>
                         <h3 class="total__subtitle subtitle">Travel touts</h3>
                     </div>
                     <div class="total__item">
-                        <span class="total__digit digit" data-val="230">0000</span>
+                        <span class="total__digit digit">1020</span>
                         <h3 class="total__subtitle subtitle">Happy clients</h3>
                     </div>
                     <div class="total__item">
-                        <span class="total__digit digit" data-val="21">00</span>
+                        <span class="total__digit digit">21</span>
                         <h3 class="total__subtitle subtitle">Tracking tours</h3>
                     </div>
                 </section>
