--- a/homeworkFinal/index.html
+++ b/homeworkFinal/index.html
@@ -237,7 +237,7 @@
         </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script defer src="/homeworkFinal/index.js"></script>
+    <script defer src="../homeworkFinal/index.js"></script>
 </body>
 
 </html>
