--- a/homeworkjs10/index.html
+++ b/homeworkjs10/index.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Пoдії
-    </title>
+    <title>Пoдії</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div id="container">
-        <p>Hello world!!</p>
+    <div id="container" class="container">
+        <span class="a_letter">A</span>
+        <span class="s_letter">S</span>
+        <span class="d_letter">D</span>
     </div>
+    <audio src=""></audio>
+
     <script src="script.js"></script>
 </body>
 
