add class pressed

--- a/homeworkjs10/index.html
+++ b/homeworkjs10/index.html
@@ -10,11 +10,24 @@
 
 <body>
     <div id="container" class="container">
-        <span class="a_letter">A</span>
-        <span class="s_letter">S</span>
-        <span class="d_letter">D</span>
+        <div data-key="a" class="letter"><span><kbd>A</kbd></span></div>
+        <div data-key="s" class="letter"><span><kbd>S</kbd></span></div>
+        <div data-key="d" class="letter"><span><kbd>D</kbd></span></div>
+        <div data-key="f" class="letter"><span><kbd>F</kbd></span></div>
+        <div data-key="g" class="letter"><span><kbd>G</kbd></span></div>
+        <div data-key="h" class="letter"><span><kbd>H</kbd></span></div>
+        <div data-key="j" class="letter"><span><kbd>J</kbd></span></div>
+        <div data-key="k" class="letter"><span><kbd>K</kbd></span></div>
     </div>
-    <audio src=""></audio>
+
+    <audio data-letter="a" src="/homeworkjs10/sound/a.mp3"></audio>
+    <audio data-letter="s" src="/homeworkjs10/sound/s.mp3"></audio>
+    <audio data-letter="d" src="/homeworkjs10/sound/d.mp3"></audio>
+    <audio data-letter="f" src="/homeworkjs10/sound/f.mp3"></audio>
+    <audio data-letter="g" src="/homeworkjs10/sound/g.mp3"></audio>
+    <audio data-letter="h" src="/homeworkjs10/sound/h.mp3"></audio>
+    <audio data-letter="j" src="/homeworkjs10/sound/j.mp3"></audio>
+    <audio data-letter="k" src="/homeworkjs10/sound/k.mp3"></audio>
 
     <script src="script.js"></script>
 </body>
