--- a/homeworkjs10/index.html
+++ b/homeworkjs10/index.html
@@ -18,6 +18,7 @@
         <div data-key="h" class="letter"><span><kbd>H</kbd></span></div>
         <div data-key="j" class="letter"><span><kbd>J</kbd></span></div>
         <div data-key="k" class="letter"><span><kbd>K</kbd></span></div>
+        <div data-key="l" class="letter"><span><kbd>L</kbd></span></div>
     </div>
 
     <audio data-letter="a" src="/homeworkjs10/sound/a.mp3"></audio>
@@ -28,6 +29,7 @@
     <audio data-letter="h" src="/homeworkjs10/sound/h.mp3"></audio>
     <audio data-letter="j" src="/homeworkjs10/sound/j.mp3"></audio>
     <audio data-letter="k" src="/homeworkjs10/sound/k.mp3"></audio>
+    <audio data-letter="l" src="/homeworkjs10/sound/l.mp3"></audio>
 
     <script src="script.js"></script>
 </body>
