--- a/homeworkjs12/index.html
+++ b/homeworkjs12/index.html
@@ -7,10 +7,16 @@
     <title>Робота з сервером
     </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
+    <div>
+        <h1>Приклад роботи з сервером <a href="https://swapi.dev/">swapi.dev</a> </h1>
+        <button id="button" type="button">Отримати інформацію</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
