--- a/homeworkjs12/index.html
+++ b/homeworkjs12/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="first">
         <h1>Приклад роботи з сервером <a href="https://swapi.dev/">swapi.dev</a> </h1>
         <button id="button" type="button">Отримати інформацію</button>
     </div>
