add next button

--- a/homeworkjs12/index.html
+++ b/homeworkjs12/index.html
@@ -13,10 +13,13 @@
 </head>
 
 <body>
-    <div class="first">
+    <div id="first" class="first">
         <h1>Приклад роботи з сервером <a href="https://swapi.dev/">swapi.dev</a> </h1>
-        <button id="button" type="button">Отримати інформацію</button>
+        <button id="refresh_button" type="button">Отримати інформацію</button>
+        <button id="next_button" type="button">Next</button>
     </div>
+    <div id="second" class="second"></div>
+
 
     <script src="script.js"></script>
 </body>
