--- a/homeworkjs12/index.html
+++ b/homeworkjs12/index.html
@@ -15,6 +15,13 @@
 <body>
     <div id="first" class="first">
         <h1>Приклад роботи з сервером <a href="https://swapi.dev/">swapi.dev</a> </h1>
+
+        <div class="film_number">
+            <label for="film_number">Введіть номер епізоду</label>
+            <input id="film_number" type="number">
+
+        </div>
+
         <button id="refresh_button" type="button">Отримати інформацію</button>
         <button id="next_button" type="button">Next</button>
     </div>
