--- a/homeworkjs13/index.html
+++ b/homeworkjs13/index.html
@@ -6,14 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Символи. Генератори. Ітератори
     </title>
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-   
-<h1 id="font">Символи. Генератори. Ітератори</h1>
-
-    <script src="script.js"></script>
+    <h1 id="font">Символи. Генератори. Ітератори</h1>
+    <script src="dist/main.js"></script>
 </body>
 
 </html>
